# docker_init

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
main/: admin.py  exceptions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_user_role.py  0003_tag_task.py  0003_tag_user_mail_alter_user_first_name_and_more.py
main/models/: __init__.py  tag.py  task.py  user.py
task_manager/: permissions.py  settings.py  urls.py
test/: test_admin.py
